// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations login with correct password 1`] = `
Object {
  "body": Object {
    "kind": "single",
    "singleResult": Object {
      "data": Object {
        "login": Object {
          "email": "member@member.com",
          "firstName": "User",
          "id": "1",
          "lastName": "Test",
          "token": "token",
        },
      },
      "errors": undefined,
    },
  },
  "http": Object {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`mutations login with incorrect password 1`] = `
Object {
  "body": Object {
    "kind": "single",
    "singleResult": Object {
      "data": null,
      "errors": Array [
        Object {
          "extensions": Object {
            "code": "INTERNAL_SERVER_ERROR",
          },
          "locations": Array [
            Object {
              "column": 5,
              "line": 3,
            },
          ],
          "message": "email or password is incorrect",
          "path": Array [
            "login",
          ],
        },
      ],
    },
  },
  "http": Object {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`mutations login with invalid email 1`] = `
Object {
  "body": Object {
    "kind": "single",
    "singleResult": Object {
      "data": null,
      "errors": Array [
        Object {
          "extensions": Object {
            "code": "INTERNAL_SERVER_ERROR",
          },
          "locations": Array [
            Object {
              "column": 5,
              "line": 3,
            },
          ],
          "message": "email or password is incorrect",
          "path": Array [
            "login",
          ],
        },
      ],
    },
  },
  "http": Object {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`mutations signUp 1`] = `
Object {
  "body": Object {
    "kind": "single",
    "singleResult": Object {
      "data": null,
      "errors": Array [
        Object {
          "extensions": Object {
            "code": "INTERNAL_SERVER_ERROR",
          },
          "locations": Array [
            Object {
              "column": 7,
              "line": 13,
            },
          ],
          "message": "Cannot return null for non-nullable field AuthUser.firstName.",
          "path": Array [
            "signUp",
            "firstName",
          ],
        },
      ],
    },
  },
  "http": Object {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;
